--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#2c3e50",
-  "background_color": "#2c3e50",
+  "theme_color": "#e84118",
+  "background_color": "#e84118",
   "display": "standalone",
   "scope": "/",
   "start_url": "/"
